Bug 141945 - FILEOPEN DOCX Images lost, only empty frames remaining
Summary: FILEOPEN DOCX Images lost, only empty frames remaining
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.2.0 target:7.1.4
Keywords: bibisected, bisected, regression
: 142087 (view as bug list)
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2021-04-28 07:51 UTC by NISZ LibreOffice Team
Modified: 2022-12-21 09:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (227.61 KB, image/png)
2021-04-28 07:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-04-28 07:51:27 UTC
Created attachment 171471 [details]
Screenshot of the original document side by side in Word and Writer

When checking bug #134509 attachment #162642 [details] it looks like the two images disappeared, only their empty frames are there.
These used to be visible as on attachment 163110 [details], even if incorrectly positioned a bit.

Steps to reproduce:
    1. Open  attachment #162642 [details]

Actual results:
Empty image frames on page 1.

Expected results:
A smaller light blue image and a larged dark blue one.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: db1cf111666847ce5ce93d18ae5ae8c29a4c44d6
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Additional Information: 
Bibisected using bibisect-win64-7.2 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=eb85de8e6b61fb3fcb6c03ae0145f7fe5478bccf 
author	Michael Stahl <michael.stahl@allotropia.de>	Tue Apr 13 20:13:51 2021 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	Mon Apr 19 17:22:06 2021 +0200

sw: layout: if fly's anchor moves forward, move fly off SwPageFrame

Adding CC to: Michael Stahl
Comment 1 Xisco Faulí 2021-04-28 08:24:47 UTC
Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 41ff704cc49b7097b717882616011962ecd7198f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2021-05-04 17:11:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30512746c182b52f37f9a818d4e206c98e715cb7

tdf#141945 sw: layout: check master frame when moving fly forward

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2021-05-05 06:58:06 UTC
*** Bug 142087 has been marked as a duplicate of this bug. ***
Comment 4 Michael Stahl 2021-05-05 09:45:43 UTC
fixed on master, now looks the same as before.

i didn't add a test because the result still looks obviously wrong, looks different from Word, and the Word rendering also doesn't make sense to me
(why does it put a couple lines on the left of page 1 and then suddenly stop?).
Comment 5 Commit Notification 2021-05-06 08:41:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/41f68b652eb1ccdd4941e2270426461da8e66417

tdf#141945 sw: layout: check master frame when moving fly forward

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2021-05-07 16:08:49 UTC
Verified. it's ok in Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 1a99b4e44190e182d56a04678850d62635d74c65
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded