sw/inc/anchoreddrawobject.hxx
@@ -95,6 +95,7 @@ class SW_DLLPUBLIC SwAnchoredDrawObject : public SwAnchoredObject
             page frame
         */
         virtual void RegisterAtCorrectPage() override;
+        virtual void RegisterAtPage(SwPageFrame &) override;
 
         virtual bool SetObjTop_( const SwTwips _nTop) override;
         virtual bool SetObjLeft_( const SwTwips _nLeft) override;
